RESOLVED FIXED 110074
transition-property property doesn't accept "all, <IDENT>".
https://bugs.webkit.org/show_bug.cgi?id=110074
Summary transition-property property doesn't accept "all, <IDENT>".
Syoichi Tsuyuhara
Reported 2013-02-17 20:14:53 PST
According to CSS Transitions... >Name: transition-property >Value: none | <single-transition-property> [ ‘,’ <single-transition-property> ]* >(snip) ><single-transition-property> = all | <IDENT> http://dev.w3.org/csswg/css3-transitions/#transition-property On Windows 7 Home Premium SP1 64bit, Firefox Nightly 21.0a1(buildID 20130217031005) corresponds to this. But Chromium 27.0.1416.0 (183049) doesn't accept "all, <IDENT>" in transition-property property. http://jsfiddle.net/syoichi/zz4Uz/ Moreover, It seems that transition-property property and transition shorthand property can't accept "all, all", but transition shorthand property can accept "all, <IDENT>". I can't find description like ‘"all, <IDENT>" is invalid’ in the spec. I'm sorry if I'm wrong. related: https://www.w3.org/Bugs/Public/show_bug.cgi?id=14602
Attachments
Patch (9.92 KB, patch)
2013-02-25 07:00 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2013-02-25 07:00:13 PST
WebKit Review Bot
Comment 2 2013-02-25 10:58:09 PST
Comment on attachment 190049 [details] Patch Clearing flags on attachment: 190049 Committed r143948: <http://trac.webkit.org/changeset/143948>
WebKit Review Bot
Comment 3 2013-02-25 10:58:13 PST
All reviewed patches have been landed. Closing bug.
Syoichi Tsuyuhara
Comment 4 2013-03-01 10:23:54 PST
I confirmed that this bug is fixed on Chromium 27.0.1427.0 (185534). Thanks!
Note You need to log in before you can comment on or make changes to this bug.